--- a/WSRouleteServer/MainWindow.xaml
+++ b/WSRouleteServer/MainWindow.xaml
@@ -29,10 +29,11 @@
         <TextBlock x:Name="timerT" Grid.Row="3" Grid.Column="2" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="20"></TextBlock>
         <ProgressBar x:Name="pbStatus" Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2" Background="Transparent" Foreground="Yellow"></ProgressBar>
 
-        <TextBox x:Name="chat" Grid.Column="0" Grid.Row="1" Background="LightGreen"></TextBox>
-        <ListBox x:Name="list1" Grid.Row="0" Grid.Column="0"></ListBox>
+        <!-- <TextBox x:Name="chat" Grid.Column="0" Grid.Row="1" Background="LightGreen"></TextBox>-->
+        <!--<ListBox x:Name="list1" Grid.Row="0" Grid.Column="0"></ListBox>-->
 
-        <Button x:Name="btnSend" Grid.Column="3" Grid.Row="0" Content="START" Click="BtnSend_Click" ></Button>
+        <!--<Button x:Name="btnSend" Grid.Column="3" Grid.Row="0" Content="START" Click="BtnSend_Click" ></Button>-->
+        <Label Name="IpADress" Grid.Row="3" Grid.Column="0"></Label>
 
     </Grid>
 </Window>
